$LastChangedDate: 2004-12-30 00:22:54 -0500 (Thu, 30 Dec 2004)$

SVN: $Rev$

Date	Added
12/30
        * Moved supernovice guardian angel messages to msg_athena.conf [celest]

12/29
	* Fix account register wipe issue (SVN 868) [MouseJstr]
	* Double storage/lag exploit fixed (SVN 867) [MouseJstr]
	* Another -1 alive_timer fix (SVN 866) [MouseJstr]
	* Added @dmstart and @dmtick for debugging malloc tests [MouseJstr]
	* Fix some more compile errors on different platforms [MouseJstr]
	* Fixing a crash if you change the name of a pet you don't have (SVN 863) [MouseJstr]
	* Eliminated src/common/malloc.c when not needed [MouseJstr]
	* Some code cleanup in prep for new debugging malloc (SVN 861) [MouseJstr]
        * Updated Soul Breaker's damage calculation [celest]
        * Updated Meteor Assault's cast delay to be not affected by dex [celest]
        * Changed int_guild.c so it will calculate average guild level only if > 0
          members are found - prevent divide by zero crashes (why would an empty guild
          be requested to update its' member info in the first place?) [celest]
        * Added Shinomori's fixes for string copying in script.c [celest]
	* Removed @giveitem since #item it's the one that does this and added some of it's support to #item [MC Cameri]
	  -#item <item_name> <item_count> <charname|all|everyone>
	* Uncommented out import in charcommand_athena.conf, there is
          need to have it commented (all the others ones are
          uncommented) [Ajarn]

12/28
        * When restarting the char-server,  reset the online status
          of all characters and guild-members (SVN 849) [MouseJstr]
	* Fix double timer_delete caused by pc_alive_timer (SVN 848)
	  [MouseJstr]
	* Fixed typo in npcs_athena.conf (mc_cameri verses mc_Cameri),
	  thanks Mellow972 for pointing that out (SVN 845) [MouseJstr]
        * Reduced weapon breaking chance for Overthrust, thanks Draco - i almost
          forgot to add this update [celest]